--- a/sac/sac.ipynb
+++ b/sac/sac.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "from tqdm import tqdm\n",
     "from collections import deque\n",
     "\n",
-    "from model import ReplayBuffer\n",
+    "from model import ReplayBuffer, SquashedNormal\n",
     "from torch.nn.utils import clip_grad_norm_\n",
     "\n",
     "import time\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,15 @@
     "        a = F.relu(self.l2(a))\n",
     "        \n",
     "        mu = self.mu(a)\n",
-    "        log_std = torch.clamp(self.std(a), -20, 2)\n",
+    "        log_std = torch.clamp(self.std(a), -20, 2)        \n",
     "        return mu, log_std\n",
     "\n",
     "    def sample(self, obs, test=False):\n",
     "        mu, log_std = self(obs)\n",
     "        if test:\n",
     "            return torch.tanh(mu), 0\n",
-    "        n = Normal(mu, log_std.exp())\n",
+    "        # n = Normal(mu, log_std.exp())\n",
+    "        n = SquashedNormal(mu, log_std.exp())\n",
     "        action = n.rsample().tanh()\n",
     "        log_prob = (n.log_prob(action) - torch.log(1 - action.pow(2) + 1e-6)).sum(1)\n",
     "        return action, log_prob\n",
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,6 +205,9 @@
     "                plt.axis('off')  # Turn off axis\n",
     "                display(plt.gcf())  # Display the current figure\n",
     "                clear_output(wait=True)  # Clear the previous output\n",
+    "    \n",
+    "        if not test:\n",
+    "            optimize(episode)\n",
     "    return rews_ep, step\n",
     "\n",
     "def optimize(episode):\n",
@@ -249,8 +253,8 @@
     "    writer.add_scalar(\"Loss/a\", loss_a.cpu().detach(), episode)\n",
     "    writer.add_scalar(\"Loss/entropy\", -temp * log_prob.mean(), episode)\n",
     "    \n",
-    "    soft_update(Q1_, Q1, tau=0.01)\n",
-    "    soft_update(Q2_, Q2, tau=0.01)\n",
+    "    soft_update(Q1_, Q1, tau=0.001)\n",
+    "    soft_update(Q2_, Q2, tau=0.001)\n",
     "\n",
     "# Collect some data before training\n",
     "while global_step < start_steps:\n",
@@ -259,34 +263,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 17/4000000 [00:42<2803:19:55,  2.52s/it]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/meraj/workspace/rl_algorithms/sac/sac.ipynb Cell 8\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/meraj/workspace/rl_algorithms/sac/sac.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m episode \u001b[39min\u001b[39;00m tqdm(\u001b[39mrange\u001b[39m(\u001b[39m4000000\u001b[39m)):   \n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/meraj/workspace/rl_algorithms/sac/sac.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     rews_ep, step \u001b[39m=\u001b[39m run_episode()\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/meraj/workspace/rl_algorithms/sac/sac.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     rews_log\u001b[39m.\u001b[39mappend(\u001b[39msum\u001b[39m(rews_ep))\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/meraj/workspace/rl_algorithms/sac/sac.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     steps_log\u001b[39m.\u001b[39mappend(step)\n",
-      "\u001b[1;32m/home/meraj/workspace/rl_algorithms/sac/sac.ipynb Cell 8\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/meraj/workspace/rl_algorithms/sac/sac.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     action \u001b[39m=\u001b[39m actor\u001b[39m.\u001b[39msample(torch\u001b[39m.\u001b[39mtensor(obs)\u001b[39m.\u001b[39munsqueeze(\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mto(device), test\u001b[39m=\u001b[39mtest)[\u001b[39m0\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/meraj/workspace/rl_algorithms/sac/sac.ipynb#X13sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     action \u001b[39m=\u001b[39m action[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mto(\u001b[39m'\u001b[39m\u001b[39mcpu\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mdetach()\u001b[39m.\u001b[39mnumpy()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/meraj/workspace/rl_algorithms/sac/sac.ipynb#X13sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m obs_, reward, terminated, truncated, _ \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39;49mstep(action)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/meraj/workspace/rl_algorithms/sac/sac.ipynb#X13sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m obs_ \u001b[39m=\u001b[39m (obs_ \u001b[39m-\u001b[39m env\u001b[39m.\u001b[39mobservation_space\u001b[39m.\u001b[39mlow) \u001b[39m/\u001b[39m (env\u001b[39m.\u001b[39mobservation_space\u001b[39m.\u001b[39mhigh \u001b[39m-\u001b[39m env\u001b[39m.\u001b[39mobservation_space\u001b[39m.\u001b[39mlow) \u001b[39m*\u001b[39m \u001b[39m2\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/meraj/workspace/rl_algorithms/sac/sac.ipynb#X13sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m done \u001b[39m=\u001b[39m terminated \u001b[39mor\u001b[39;00m truncated\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/gymnasium/wrappers/time_limit.py:57\u001b[0m, in \u001b[0;36mTimeLimit.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstep\u001b[39m(\u001b[39mself\u001b[39m, action):\n\u001b[1;32m     47\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Steps through the environment and if the number of steps elapsed exceeds ``max_episode_steps`` then truncate.\u001b[39;00m\n\u001b[1;32m     48\u001b[0m \n\u001b[1;32m     49\u001b[0m \u001b[39m    Args:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     55\u001b[0m \n\u001b[1;32m     56\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 57\u001b[0m     observation, reward, terminated, truncated, info \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n\u001b[1;32m     58\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_elapsed_steps \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m     60\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_elapsed_steps \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_max_episode_steps:\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/gymnasium/wrappers/order_enforcing.py:56\u001b[0m, in \u001b[0;36mOrderEnforcing.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_has_reset:\n\u001b[1;32m     55\u001b[0m     \u001b[39mraise\u001b[39;00m ResetNeeded(\u001b[39m\"\u001b[39m\u001b[39mCannot call env.step() before calling env.reset()\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 56\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/gymnasium/wrappers/env_checker.py:51\u001b[0m, in \u001b[0;36mPassiveEnvChecker.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     49\u001b[0m     \u001b[39mreturn\u001b[39;00m env_step_passive_checker(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv, action)\n\u001b[1;32m     50\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> 51\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49menv\u001b[39m.\u001b[39;49mstep(action)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/gymnasium/envs/box2d/lunar_lander.py:631\u001b[0m, in \u001b[0;36mLunarLander.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m    617\u001b[0m         p\u001b[39m.\u001b[39mApplyLinearImpulse(\n\u001b[1;32m    618\u001b[0m             (\n\u001b[1;32m    619\u001b[0m                 ox \u001b[39m*\u001b[39m SIDE_ENGINE_POWER \u001b[39m*\u001b[39m s_power,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    623\u001b[0m             \u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m    624\u001b[0m         )\n\u001b[1;32m    625\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlander\u001b[39m.\u001b[39mApplyLinearImpulse(\n\u001b[1;32m    626\u001b[0m         (\u001b[39m-\u001b[39mox \u001b[39m*\u001b[39m SIDE_ENGINE_POWER \u001b[39m*\u001b[39m s_power, \u001b[39m-\u001b[39moy \u001b[39m*\u001b[39m SIDE_ENGINE_POWER \u001b[39m*\u001b[39m s_power),\n\u001b[1;32m    627\u001b[0m         impulse_pos,\n\u001b[1;32m    628\u001b[0m         \u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m    629\u001b[0m     )\n\u001b[0;32m--> 631\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mworld\u001b[39m.\u001b[39;49mStep(\u001b[39m1.0\u001b[39;49m \u001b[39m/\u001b[39;49m FPS, \u001b[39m6\u001b[39;49m \u001b[39m*\u001b[39;49m \u001b[39m30\u001b[39;49m, \u001b[39m2\u001b[39;49m \u001b[39m*\u001b[39;49m \u001b[39m30\u001b[39;49m)\n\u001b[1;32m    633\u001b[0m pos \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlander\u001b[39m.\u001b[39mposition\n\u001b[1;32m    634\u001b[0m vel \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlander\u001b[39m.\u001b[39mlinearVelocity\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/gymnasium/envs/box2d/lunar_lander.py:75\u001b[0m, in \u001b[0;36mContactDetector.EndContact\u001b[0;34m(self, contact)\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39mlegs[i] \u001b[39min\u001b[39;00m [contact\u001b[39m.\u001b[39mfixtureA\u001b[39m.\u001b[39mbody, contact\u001b[39m.\u001b[39mfixtureB\u001b[39m.\u001b[39mbody]:\n\u001b[1;32m     73\u001b[0m             \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39mlegs[i]\u001b[39m.\u001b[39mground_contact \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m---> 75\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mEndContact\u001b[39m(\u001b[39mself\u001b[39m, contact):\n\u001b[1;32m     76\u001b[0m     \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m2\u001b[39m):\n\u001b[1;32m     77\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39menv\u001b[39m.\u001b[39mlegs[i] \u001b[39min\u001b[39;00m [contact\u001b[39m.\u001b[39mfixtureA\u001b[39m.\u001b[39mbody, contact\u001b[39m.\u001b[39mfixtureB\u001b[39m.\u001b[39mbody]:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for episode in tqdm(range(4000000)):   \n",
     "    rews_ep, step = run_episode()\n",
@@ -305,9 +284,9 @@
     "        writer.add_scalar(\"Eval/reward\", sum(eval_rews) / len(eval_rews), episode)\n",
     "        writer.add_scalar(\"Eval/step\", sum(eval_steps) / len(eval_steps), episode)\n",
     "\n",
-    "    if episode % train_ep_freq == 0:\n",
-    "        for opt_step in range(num_opt_steps):\n",
-    "            optimize(episode)"
+    "    # if episode % train_ep_freq == 0:\n",
+    "    #     for opt_step in range(num_opt_steps):\n",
+    "            "
    ]
   },
   {
